{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 69,
  "lineage": "bb1e6446-027a-4bac-b28d-bf1511b02e0f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "firsteip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070591c65b9954257",
            "associate_with_private_ip": "10.0.1.100",
            "association_id": "eipassoc-0f33443def510ee7c",
            "domain": "vpc",
            "id": "eipalloc-070591c65b9954257",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cea59de892133764",
            "private_dns": "ip-10-0-1-100.ec2.internal",
            "private_ip": "10.0.1.100",
            "public_dns": "ec2-52-7-52-111.compute-1.amazonaws.com",
            "public_ip": "52.7.52.111",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.myfirstgateway",
            "aws_network_interface.foo",
            "aws_security_group.allow",
            "aws_subnet.myfirstsubnet",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myfirstgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836377050370:internet-gateway/igw-0a14e07dd4cd3c984",
            "id": "igw-0a14e07dd4cd3c984",
            "owner_id": "836377050370",
            "tags": {
              "Name": "first"
            },
            "tags_all": {
              "Name": "first"
            },
            "vpc_id": "vpc-07f962b77c100b2f9"
          },
          "dependencies": [
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "foo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836377050370:network-interface/eni-0cea59de892133764",
            "id": "eni-0cea59de892133764",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:2f:43:7c:fd:79",
            "owner_id": "836377050370",
            "private_ip": "10.0.1.100",
            "private_ip_list": [
              "10.0.1.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ca7b23b7013e0db8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ce3444714e28575"
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.myfirstsubnet",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myfirstroutettable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836377050370:route-table/rtb-0e7d891e5d7bf1d79",
            "id": "rtb-0e7d891e5d7bf1d79",
            "owner_id": "836377050370",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a14e07dd4cd3c984",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "first"
            },
            "tags_all": {
              "Name": "first"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f962b77c100b2f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myfirstgateway",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b321bad2227541e1",
            "route_table_id": "rtb-0e7d891e5d7bf1d79",
            "subnet_id": "subnet-03ce3444714e28575"
          },
          "dependencies": [
            "aws_internet_gateway.myfirstgateway",
            "aws_route_table.myfirstroutettable",
            "aws_subnet.myfirstsubnet",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836377050370:security-group/sg-0ca7b23b7013e0db8",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca7b23b7013e0db8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow",
            "name_prefix": "",
            "owner_id": "836377050370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f962b77c100b2f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myfirstsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836377050370:subnet/subnet-03ce3444714e28575",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ce3444714e28575",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836377050370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "first"
            },
            "tags_all": {
              "Name": "first"
            },
            "vpc_id": "vpc-07f962b77c100b2f9"
          },
          "dependencies": [
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myfirstvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836377050370:vpc/vpc-07f962b77c100b2f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0972304e9e5c1c3d8",
            "default_route_table_id": "rtb-06243b8a58d8c6ce9",
            "default_security_group_id": "sg-0ec3fd9ef283684b9",
            "dhcp_options_id": "dopt-05fda6bc7fbe4614b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07f962b77c100b2f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06243b8a58d8c6ce9",
            "owner_id": "836377050370"
          }
        }
      ]
    }
  ]
}